--- a/Wray_Tracker/Web.config
+++ b/Wray_Tracker/Web.config
@@ -11,7 +11,7 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Wray_Tracker-20200505113522.mdf;Initial Catalog=aspnet-Wray_Tracker-20200505113522;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings>
+  <appSettings file="Smtp.config">
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
