--- a/Wray_Tracker/Wray_Tracker.csproj
+++ b/Wray_Tracker/Wray_Tracker.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helper\TicketHelper.cs" />
     <Compile Include="Helper\UserProjectHelper.cs" />
     <Compile Include="Helper\UserRoleHelper.cs" />
     <Compile Include="Migrations\Configuration.cs" />
@@ -201,6 +202,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomUserData.cs" />
+    <Compile Include="ViewModels\DashboardVM.cs" />
     <Compile Include="ViewModels\EmailModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -384,6 +386,7 @@
     <Content Include="Views\Projects\ManageProjectAssignments.cshtml" />
     <Content Include="Views\Projects\ManageProjectLevelUsers.cshtml" />
     <Content Include="Smtp.config" />
+    <Content Include="Views\Projects\ManageProjectLevelUsersRemove.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
