update to files
ticket notifications implemented

--- a/Wray_Tracker/Wray_Tracker.csproj
+++ b/Wray_Tracker/Wray_Tracker.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2020.1.0.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2020.1.0\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -187,6 +190,8 @@
     <Compile Include="Helper\CustomComparer.cs" />
     <Compile Include="Helper\HistoryDisplayHelper.cs" />
     <Compile Include="Helper\HistoryHelper.cs" />
+    <Compile Include="Helper\MessageHelper.cs" />
+    <Compile Include="Helper\NotificationHelper.cs" />
     <Compile Include="Helper\TicketHelper.cs" />
     <Compile Include="Helper\AssignmentHelper.cs" />
     <Compile Include="Helper\UserProjectHelper.cs" />
@@ -209,6 +214,7 @@
     <Compile Include="ViewModels\CustomUserData.cs" />
     <Compile Include="ViewModels\DashboardVM.cs" />
     <Compile Include="ViewModels\EmailModel.cs" />
+    <Compile Include="ViewModels\MultiListTicketVM.cs" />
     <Compile Include="ViewModels\TicketIndexVM.cs" />
     <Compile Include="ViewModels\UserProfileVM.cs" />
   </ItemGroup>
@@ -394,6 +400,8 @@
     <Content Include="Smtp.config" />
     <Content Include="Views\Home\EditProfile.cshtml" />
     <Content Include="Views\Projects\AssignUsers.cshtml" />
+    <Content Include="Views\Shared\_SideNav.cshtml" />
+    <Content Include="Views\Shared\_TicketTable.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
